<resources>
    <string name="app_name">TouristApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_poilist">POIListActivity</string>
    <string name="title_activity_poidetails">POIDetailsActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_poidrawer">POIDrawer</string>

    <string name="atm">ATM</string>
    <string name="attraction">Attraction</string>
    <string name="beach">Beach</string>
    <string name="hospital">Hospital</string>
    <string name="hotel">Hotel</string>
    <string name="museum">Museum</string>
    <string name="nightlife">Nightlife</string>
    <string name="parc">Parc</string>
    <string name="restaurant">Restaurant</string>
    <string name="service">Service</string>
    <string name="shopping">Shopping</string>
    <string name="sport">Sport</string>
    <string name="transport">Transport</string>
    <string name="university">University</string>

    <array name="category">
        <item>@string/atm</item>
        <item>@string/attraction</item>
        <item>@string/beach</item>
        <item>@string/hospital</item>
        <item>@string/hotel</item>
        <item>@string/museum</item>
        <item>@string/nightlife</item>
        <item>@string/parc</item>
        <item>@string/restaurant</item>
        <item>@string/service</item>
        <item>@string/shopping</item>
        <item>@string/sport</item>
        <item>@string/transport</item>
        <item>@string/university</item>
    </array>

    <string-array name="category_drawable">
        <item>@id/nav_category_atm</item>
        <item>@id/nav_category_attractions</item>
        <item>@id/nav_category_beach</item>
        <item>@id/nav_category_hospital</item>
        <item>@id/nav_category_hotels</item>
        <item>@id/nav_category_museums</item>
        <item>@id/nav_category_nightlife</item>
        <item>@id/nav_category_parc</item>
        <item>@id/nav_category_restaurants</item>
        <item>@id/nav_category_services</item>
        <item>@id/nav_category_shopping</item>
        <item>@id/nav_category_sport</item>
        <item>@id/nav_category_transport</item>
        <item>@id/nav_category_university</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_admin_menu">AdminMenuActivity</string>
    <string name="title_activity_edit_poi">EditPOIActivity</string>
    <string name="progress_bar_downloading_message">Downloading the latest POI database</string>
    <string name="progress_bar_downloading_message_img">Downloading the latest POI images</string>
    <string name="progress_bar_unzipping_message">Unzipping the latest POI images</string>
    <string name="progress_bar_single_unzip_message">Unzipping %s</string>
    <string name="title_exit_confirmation">Tap again if you want really to exit</string>
    <string name="title_ask_database_download">Do you want to download the lastest database?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="admin_menu_selection_poi">Select the POI</string>
    <string name="login_empty_pwd">Password is empty</string>
    <string name="login_empty_email">Email is empty</string>
    <string name="login_unvalid_email">Enter a valid email</string>
    <string name="login_failed">Bad Email or Password</string>
    <string name="login_success">Welcolme to the admin menu</string>
    <string name="map_orientation_enabled">Auto Orientation Map mode Enabled</string>
    <string name="map_orientation_disabled">Auto Orientation Map mode Disabled</string>
    <string name="battery_usage_map">Battery usage for loading map : %s</string>
    <string name="battery_total_usage">Battery total usage : %s</string>
    <string name="poi_list_toolbar_title">Select a POI</string>
    <string name="battery_image_loading_usage">Battery usage for loading poi images : %s</string>
    <string name="poi_address_text">"Address : "</string>
    <string name="poi_email_text">"Email : "</string>
    <string name="poi_phone_text">"Tel : "</string>
    <string name="poi_website_text">"Website : "</string>
    <string name="battery_loading_detais_usage">Battery usage for loading poi details : %s</string>
    <string name="poi_liked">This poi is added as favorite</string>
    <string name="poi_unliked">This poi is removed from yours favorites</string>
    <string name="poi_distance_text">Distance : %d m</string>
    <string name="edit_poi_empty_name">Name is empty</string>
    <string name="edit_poi_empty_description">Description is empty</string>
    <string name="edit_poi_empty_image_link">Image link is empty</string>
    <string name="edit_poi_unvalid_image_link">Image link must contain an http or poi link</string>
    <string name="edit_poi_unvalide_website_link">Website link must contain an http link</string>
    <string name="edit_poi_empty_latitude">Latitude must be not null</string>
    <string name="edit_poi_empty_longitude">Longitude must be not null</string>
    <string name="edit_poi_unvalid_mail">Enter a valid email</string>
    <string name="edit_poi_create_command">Create New POI</string>
    <string name="edit_poi_edit_command">Edit POI</string>
    <string name="edit_poi_delete_command">Delete POI</string>
    <string name="edit_poi_safe_insertion">New POI is securely inserted</string>
    <string name="edit_poi_safe_update">The selected POI is securely updated</string>
    <string name="edit_poi_safe_delete">The selected POI is securely deleted</string>
    <string name="battery_level_upload_usage">Battery usage for uploading poi : %s</string>
    <string name="check_connectivity_gps_message">Your GPS seems to be disabled, do you want to enable it ?</string>
    <string name="check_connectivity_internet_message">An internet connection is required in order to do some operations , do you want to search some WIFI points?</string>
    <string name="connectivity_change_no_internet_message">"No Internet connection "</string>
    <string name="dialog_abort">Abort</string>
    <string name="battery_download_usage">Battery usage for downloading database : %s</string>
    <string name="dialog_ok">OK</string>
    <string name="about_title">About</string>
    <string name="project_author_1">Sara Farshadfar</string>
    <string name="project_author_2">Javid Mougamadou</string>
    <string name="project_author_3">Mojgan Kazemi</string>
    <string name="about_message" formatted="false">Tourist App was coded as part of the final project from Mobile Programming module (INF8405) by: \n%s\n%s\n%s\n</string>
    <string name="admin_menu_title_text">Admin Menu</string>
    <string name="create_poi_button_text">Create new place</string>
    <string name="edit_poi_button_text">Edit existing place</string>
    <string name="delete_poi_button_text">Delete existing place</string>
    <string name="title_command_text">Create New POI</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="done_button_text">DONE</string>
    <string name="register_title_text">Sign In</string>
    <string name="register_indication_text">If you are admin, you can login in order to edit the POI database</string>
    <string name="signup_button_text">SIGN IN</string>
    <string name="skip_button_text">Skip</string>
    <string name="email_hint_text">Email</string>
    <string name="password_hint_text">Password</string>
    <string name="title_start_button_text">START</string>
    <string name="edit_db_button_text">EDIT DATABASE</string>
    <string name="about_button_text">ABOUT</string>
    <string name="poi_location_label_text">POI Location</string>
    <string name="poi_infos_label_text">POI Infos</string>
    <string name="poi_description_label_text">POI Description</string>
    <string name="header_main_title_text">Tourist App</string>
    <string name="header_subsection_title_text">INF8405 - Informatique Mobile</string>
    <string name="options_see_my_pos_text">See my position</string>
    <string name="options_about_text">About</string>
    <string name="options_search_text">Search</string>
    <string name="all_spots">All Spots</string>
    <string name="favorites">Favorites</string>
</resources>
